--- a/content_builder/src/html/dark_OrganizationNewsModalComponent.html
+++ b/content_builder/src/html/dark_OrganizationNewsModalComponent.html
@@ -33,8 +33,14 @@
                     </div>
                     <div id="modal_news_body" class="classes.modal_news_body">
                         <div class="classes.news_modal_info_box">
-                            <div id="news_modal_item_title" class="classes.news_modal_title_text" data-component-value="{this.props.blog_title}">We Are Live</div>
-                            <div id="news_modal_item_date" class="classes.news_modal_date_text" data-component-value="{this.props.blog_date}">February 19, 2018</div>
+                            <div class="ui stackable two column grid">
+                                <div class="column">
+                                    <div id="news_modal_item_title" class="classes.news_modal_title_text" data-component-value="{this.props.blog_title}">We Are Live</div>
+                                </div>
+                                <div class="column">
+                                    <div id="news_modal_item_date" class="classes.news_modal_date_text" data-component-value="{this.props.blog_date}">February 19, 2018</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="classes.modal_news_body_text" data-component-value="{this.props.blog_content}">
                                 <p>Muse about! Courage of our questions worldlets kindling the energy hidden in matter, tingling of the spine rich in heavy atoms preserve and cherish that pale blue dot. Vastness is bearable only through love brain is the seed of intelligence the ash of stellar alchemy ship of the imagination, the carbon in our apple pies a mote of dust suspended in a sunbeam at the edge of forever, the only home we've ever known cosmic ocean! Citizens of distant epochs permanence of the stars, colonies. A billion trillion, emerged into consciousness the carbon in our apple pies muse about. Rogue. Cosmic fugue white dwarf globular star cluster tingling of the spine, hundreds of thousands?</p>
