mobile changes to both new and news modal components

--- a/content_builder/src/html/dark_OrganizationDemoPage.html
+++ b/content_builder/src/html/dark_OrganizationDemoPage.html
@@ -113,11 +113,11 @@
                                     <div class="classes.news_item_container">
                                         <div id="news_item_1" class="classes.news_item_body" style="width: 100%; height: 250px; background-image: url('http://api.originbeta.net/blogMedia/CoD-4-Header.jpg'); background-size: cover; background-repeat: no-repeat; background-position: 50% 50%;">
                                             <div class="classes.news_menu_item">
-                                                <div class="ui stackable two column grid">
-                                                    <div class="column" style="padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                                <div>
+                                                    <div style="width: 60%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
                                                         <span class="classes.dark_news_title">We are live with a very long title</span>
                                                     </div>
-                                                    <div class="column" style=>
+                                                    <div style="width:40%;float:left">
                                                         <span class="classes.dark_news_date">February 19, 2018</span>
                                                     </div>
                                                 </div>
