--- a/content_builder/src/html/dark_OrganizationNewsComponent.html
+++ b/content_builder/src/html/dark_OrganizationNewsComponent.html
@@ -26,11 +26,11 @@
             <div id="news_item_1" class="classes.news_item_body">
                 <img class="classes.news_item_image" data-component-props="src={this.props.blog_media}" src="http://api.originbeta.net/blogMedia/CoD-4-Header.jpg" />    
                 <div class="classes.news_menu_item">
-                    <div class="ui stackable two column grid">
-                        <div class="column" style="padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                    <div>
+                        <div style="width:60%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
                             <span class="classes.dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
                         </div>
-                        <div class="column" style=>
+                        <div style="width:40%;float:left">
                             <span class="classes.dark_news_date" data-component-value="{this.props.blog_date}">February 19, 2018</span>
                         </div>
                     </div>
