--- a/content_builder/src/html/dark_OrganizationDemoPage.html
+++ b/content_builder/src/html/dark_OrganizationDemoPage.html
@@ -121,7 +121,7 @@
                                                         <span class="classes.dark_news_date">February 19, 2018</span>
                                                     </div>
                                                 </div>
-                                                <div style="height: 68px; overflow-y: hidden;">
+                                                <div style="width: 100%;height: 68px; overflow-y: hidden;">
                                                     <p style="padding-top: 5px; font-weight: 400; font-size: 11px; line-height: 15px;">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                                                 </div>
                                             </div>
