added social to mobile nav menu

--- a/content_builder/src/html/dark_organizationMobileMenuComponent.html
+++ b/content_builder/src/html/dark_organizationMobileMenuComponent.html
@@ -35,6 +35,12 @@
                 <a class="item">
                     Login
                 </a>
+                <a class="item">
+                    Facebook
+                </a>
+                <a class="item">
+                    Twitter
+                </a>
             </div>
       </div>
    </body>
