added youtube to nav and mobile menu

--- a/content_builder/src/html/dark_OrganizationDemoPage.html
+++ b/content_builder/src/html/dark_OrganizationDemoPage.html
@@ -54,6 +54,9 @@
                                         <div class="classes.dark_social_menu_item">
                                             <i class="fa fa-twitter"></i>
                                         </div>
+                                        <div class="classes.dark_social_menu_item">
+                                            <i class="fa fa-youtube"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
