--- a/content_builder/src/html/dark_organizationMobileMenuComponent.html
+++ b/content_builder/src/html/dark_organizationMobileMenuComponent.html
@@ -41,6 +41,9 @@
                 <a class="item">
                     Twitter
                 </a>
+                <a class="item">
+                    Youtube
+                </a>
             </div>
       </div>
    </body>
