--- a/content_builder/src/html/light_OrganizationPageComponent.html
+++ b/content_builder/src/html/light_OrganizationPageComponent.html
@@ -60,7 +60,7 @@
                                 </div>
                         </div>
                         <div class="classes.orgFooter" data-component-props="style={this.props.footer_style}">
-                                <p class="classes.orgFooterText">© Origin. All rights reserved.</p>
+                                <p data-component-value="{this.props.copyright}" class="classes.orgFooterText">© Origin. All rights reserved.</p>
                         </div>
                     </div>
                   </div>
