--- a/content_builder/src/html/OrganizationAdminProfileComponent.html
+++ b/content_builder/src/html/OrganizationAdminProfileComponent.html
@@ -70,6 +70,10 @@
                     <div class="ui fluid input">
                         <input data-component-props="value={this.props.rss_value} onChange={(e)=>{this.props.handleChange('rss_value', e);}}"  type="text" placeholder="Select Rss newsfeed URL">
                     </div>
+                    <div class="classes.admin_social_box_divider"></div>
+                     <div class="ui fluid input">
+                        <input data-component-props="value={this.props.youtube_value} onChange={(e)=>{this.props.handleChange('youtube_value', e);}}"  type="text" placeholder="YouTube link">
+                    </div>
                 </div>
             </div>
             <div class="classes.admin_title_box">
