--- a/content_builder/src/html/dark_OrganizationNavComponent.html
+++ b/content_builder/src/html/dark_OrganizationNavComponent.html
@@ -49,9 +49,9 @@
                 <div class="column">
                     <div class="classes.dark_nav_right">
                         <div class="classes.dark_org_menu_container">
-                            <a href="#"><div id="menu_login" data-component-props="style={this.props.login_style}" class="classes.org_menu_dark_item">Login</div></a>
-                            <a href="#"><div id="menu_store" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_dark_item">Store</div></a>
-                            <a href="#"><div id="menu_about" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_dark_item">About</div></a>
+                            <a><div id="menu_login" data-component-props="onClick={this.props.handleLoginClick}" class="classes.org_menu_dark_item">Login</div></a>
+                            <a><div id="menu_store" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_dark_item">Store</div></a>
+                            <a><div id="menu_about" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_dark_item">About</div></a>
                             <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}" class="classes.org_menu_dark_item">Home</div></a>
                         </div>
                     </div>
