added sponser demo plus components needed to render in react

--- a/content_builder/src/html/dark_OrganizationDemoSponsersPage.html
+++ b/content_builder/src/html/dark_OrganizationDemoSponsersPage.html
@@ -58,12 +58,12 @@
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">So, you're looking for a career in a company that's expanding, has a great culture, and has tons of amazing opportunities in its restaurants and Corporate Support Center. That place for your career is Jack in the Box®.</span>
                                     </div>
-                                    <!--<div class="classes.roster_item_social_container">
+                                    <div class="classes.roster_item_social_container">
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-facebook"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-instagram"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-youtube"></i></div>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -83,12 +83,12 @@
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">The Monster Army is Monster Energy's athlete development program that supports athletes ages 13-21 in moto, bike, skate, surf, snow, ski and wake. Athletes from all over the world are evaluated and invited into the program to represent the Monster Energy brand.</span>
                                     </div>
-                                    <!--<div class="classes.roster_item_social_container">
+                                    <div class="classes.roster_item_social_container">
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-facebook"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-instagram"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-youtube"></i></div>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -108,12 +108,12 @@
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">Known for much more than exceptional hardware, HyperX also strives to create the most authentic gaming experiences in the world. Whether you’re here to check out our eSports teams, watch exclusive content, sign up for our influencer program, or find out which premiere event we’ll be sponsoring next, you’ve come to the right place. There’s something here for all gamers, no matter what you play. We take great pride in creating a global gaming community that we like to call the #HyperXFamily.</span>
                                     </div>
-                                    <!-- <div class="classes.roster_item_social_container">
+                                    <div class="classes.roster_item_social_container">
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-facebook"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-instagram"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-youtube"></i></div>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -133,12 +133,12 @@
                                     <div class="classes.roster_item_about_container">
                                         <span class="classes.roster_about_text">Welcome to a community where millions of people and thousands of interests collide in a beautiful explosion of video games, pop culture, and conversation. With chat built into every stream, you don’t just watch on Twitch, you’re a part of the show. From classic tv show marathons to esports tournaments, if you can imagine it, it’s probably live on Twitch right now.</span>
                                     </div>
-                                    <!-- <div class="classes.roster_item_social_container">
+                                    <div class="classes.roster_item_social_container">
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-facebook"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-instagram"></i></div>
                                         <div class="classes.roster_item_social_icon"><i class="fa fa-youtube"></i></div>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
