added sponser demo plus components needed to render in react

--- a/content_builder/src/html/dark_OrganizationSponsersItemComponent.html
+++ b/content_builder/src/html/dark_OrganizationSponsersItemComponent.html
@@ -38,12 +38,12 @@
                             <div class="classes.roster_item_about_container">
                                 <span class="classes.roster_about_text">So, you're looking for a career in a company that's expanding, has a great culture, and has tons of amazing opportunities in its restaurants and Corporate Support Center. That place for your career is Jack in the Box®.</span>
                             </div>
-                            <!--<div class="classes.roster_item_social_container">
+                            <div class="classes.roster_item_social_container">
                                 <div class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
                                 <div class="classes.roster_item_social_icon"><i class="fa fa-facebook"></i></div>
                                 <div class="classes.roster_item_social_icon"><i class="fa fa-instagram"></i></div>
                                 <div class="classes.roster_item_social_icon"><i class="fa fa-youtube"></i></div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
