changed mobile menu component

--- a/content_builder/src/html/dark_organizationMobileMenuComponent.html
+++ b/content_builder/src/html/dark_organizationMobileMenuComponent.html
@@ -22,28 +22,42 @@
    </head>
    <body>
       <div data-component-name="dark_OrganizationMobileMenuComponent">
-            <div class="ui inverted vertical menu">
-                <a class="item">
-                    Home
-                </a>
-                <a class="item" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}">
-                    About
-                </a>
-                <a class="item" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}">
-                    Store
-                </a>
-                <a class="item">
-                    Login
-                </a>
-                <a class="item">
-                    Facebook
-                </a>
-                <a class="item">
-                    Twitter
-                </a>
-                <a class="item">
-                    Youtube
-                </a>
+            <div class="classes.dark_mobile_menu">
+                <div class="classes.dark_mobile_menu_item">
+                    <a class="classes.dark_mobile_menu_item">
+                        Home
+                    </a>
+                </div>
+                <div class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}">
+                                About
+                            </a>
+                </div>
+                <div class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}">
+                                Store
+                            </a>
+                </div>
+                <div class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item">
+                                Login
+                            </a>
+                </div>
+                <div class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item">
+                                Facebook
+                            </a>
+                </div>
+                <div class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item">
+                                Twitter
+                            </a>
+                </div>
+                <div class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item">
+                                Youtube
+                            </a>
+                </div>
             </div>
       </div>
    </body>
