--- a/content_builder/src/html/dark_organizationMobileMenuComponent.html
+++ b/content_builder/src/html/dark_organizationMobileMenuComponent.html
@@ -29,32 +29,32 @@
                     </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={this.props.handleAboutClick}">
                                 About
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={this.props.handleStoreClick}">
                                 Store
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={this.props.handleLoginClick}">
                                 Login
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
                                 Facebook
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
                                 Twitter
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item">
+                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
                                 Youtube
                             </a>
                 </div>
