--- a/content_builder/src/html/dark_OrganizationDemoPage.html
+++ b/content_builder/src/html/dark_OrganizationDemoPage.html
@@ -317,15 +317,14 @@
                         </div>
                     </div>
                     <div id="video_cont" class="classes.dark_media_container">
-                        <div class="classes.section_title_container">
-                            <h2>Videos</h2>
-                            </div>
-                            <h2 style="color: rgb(56, 56, 56);">
-                            <!-- react-text: 103 -->FEATURED VIDEO<!-- /react-text -->
-                            <span>
-                                <a href="#" style="color: rgb(56, 56, 56); float:right; font-size: .8em;">More Video</a>
-                            </span>
-                        </h2>
+                        <div class="classes.section_video_title_container">
+                            <h2>
+                                <!-- react-text: 103 -->VIDEOS<!-- /react-text -->
+                                <span>
+                                    <a href="#" style="color:#787878;float:right; font-size: .8em;">More Videos</a>
+                                </span>                                  </span>
+                            </h2>
+                        </div>
                         <iframe title="ifr" width="100%" height="500px" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
                         <div class="ui stackable three column grid">
                             <div class="column">
