--- a/content_builder/src/html/dark_OrganizationVideoComponent.html
+++ b/content_builder/src/html/dark_OrganizationVideoComponent.html
@@ -23,15 +23,14 @@
    </head>
    <body>
         <div data-component-name="dark_OrganizationVideoComponent" class="classes.darkNavBG">
-            <div class="classes.section_title_container">
-                <h2>Videos</h2>
-                </div>
-                <h2 style="color: rgb(76, 76, 76);">
-                FEATURED VIDEO
-                <span>
-                    <a href="#" style="color: rgb(76, 76, 76); float:right; font-size: .8em;">More Video</a>
-                </span>
-            </h2>
+            <div class="classes.section_video_title_container">
+                <h2>
+                    <!-- react-text: 103 -->VIDEOS<!-- /react-text -->
+                    <span>
+                        <a href="#" style="color:#787878;float:right; font-size: .8em;">More Videos</a>
+                    </span>                                  </span>
+                </h2>
+            </div>
             <iframe title="ifr" width="100%" height="500px" data-component-props="allowFullScreen src={this.props.video1_url}" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
             <div class="ui stackable three column grid">
                 <div class="column">
