made changes as per jira to video component

--- a/content_builder/src/html/dark_OrganizationDemoPage.html
+++ b/content_builder/src/html/dark_OrganizationDemoPage.html
@@ -319,10 +319,10 @@
                     <div id="video_cont" class="classes.dark_media_container">
                         <div class="classes.section_video_title_container">
                             <h2>
-                                <!-- react-text: 103 -->VIDEOS<!-- /react-text -->
+                                VIDEOS
                                 <span>
                                     <a href="#" style="color:#787878;float:right; font-size: .8em;">More Videos</a>
-                                </span>                                  </span>
+                                </span>                           
                             </h2>
                         </div>
                         <iframe title="ifr" width="100%" height="500px" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
