--- a/content_builder/src/html/dark_OrganizationVideoComponent.html
+++ b/content_builder/src/html/dark_OrganizationVideoComponent.html
@@ -25,10 +25,10 @@
         <div data-component-name="dark_OrganizationVideoComponent" class="classes.darkNavBG">
             <div class="classes.section_video_title_container">
                 <h2>
-                    <!-- react-text: 103 -->VIDEOS<!-- /react-text -->
+                    VIDEOS
                     <span>
                         <a href="#" style="color:#787878;float:right; font-size: .8em;">More Videos</a>
-                    </span>                                  </span>
+                     </span>                           
                 </h2>
             </div>
             <iframe title="ifr" width="100%" height="500px" data-component-props="allowFullScreen src={this.props.video1_url}" src="https://www.youtube.com/embed/oS9ACN5XQ0M" frameborder="0" allowfullscreen=""></iframe>
