--- a/content_builder/src/html/dark_organizationMobileMenuComponent.html
+++ b/content_builder/src/html/dark_organizationMobileMenuComponent.html
@@ -24,37 +24,37 @@
       <div data-component-name="dark_OrganizationMobileMenuComponent">
             <div class="classes.dark_mobile_menu">
                 <div class="classes.dark_mobile_menu_item">
-                    <a class="classes.dark_mobile_menu_item">
+                    <a class="classes.dark_mobile_menu_item_box">
                         Home
                     </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={this.props.handleAboutClick}">
+                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={this.props.handleAboutClick}">
                                 About
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={this.props.handleStoreClick}">
+                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={this.props.handleStoreClick}">
                                 Store
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={this.props.handleLoginClick}">
+                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={this.props.handleLoginClick}">
                                 Login
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
+                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('fb');}}">
                                 Facebook
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
+                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('twitter');}}">
                                 Twitter
                             </a>
                 </div>
                 <div class="classes.dark_mobile_menu_item">
-                        <a class="classes.dark_mobile_menu_item" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
+                        <a class="classes.dark_mobile_menu_item_box" data-component-props="onClick={()=>{this.props.handleSocial('youtube');}}">
                                 Youtube
                             </a>
                 </div>
