--- a/content_builder/src/html/IndividualPageComponent.html
+++ b/content_builder/src/html/IndividualPageComponent.html
@@ -32,21 +32,22 @@
                     <div class="ui stackable three column grid">
                         <div class="column">
                             <div class="ui one column grid">
-                                <div id="basic_info" class="column">
+                                <div data-component-value="{this.props.ColumnOne}" id="basic_info" class="column">
+
 
                                 </div>
                             </div>
                         </div>
                         <div class="column">
                             <div class="ui one column grid">
-                                <div id="stats_left" class="column">
+                                <div data-component-value="{this.props.ColumnTwo}" id="stats_left" class="column">
                                     
                                 </div>
                             </div>
                         </div>
                         <div class="column">
                             <div class="ui one column grid">
-                                <div id="stats_right" class="column">
+                                <div data-component-value="{this.props.ColumnThree}" id="stats_right" class="column">
                                     
                                 </div>
                             </div>
