--- a/content_builder/src/html/SignupChoiceComponent.html
+++ b/content_builder/src/html/SignupChoiceComponent.html
@@ -26,12 +26,12 @@
                 <div class="ui stackable two column grid">
                     <div class="column">
                         <div>
-                            <div class="classes.landing_page_join_button">Organization</div>
+                            <div data-component-props="onClick={()=>{this.props.handleClick('org'); }}" class="classes.landing_page_join_button">Organization</div>
                         </div>
                     </div>
                     <div class="column">
                         <div>
-                            <div class="classes.landing_page_join_button">Individual</div>
+                            <div data-component-props="onClick={()=>{this.props.handleClick('ind'); }}"class="classes.landing_page_join_button">Individual</div>
                         </div>
                     </div>
                 </div>
