--- a/content_builder/src/html/SignupPageComponent.html
+++ b/content_builder/src/html/SignupPageComponent.html
@@ -24,7 +24,7 @@
       <div data-component-name="SignupPageComponent" class="classes.signupBGImage">
          <header class="classes.signupHeader">
             <div class="ui container">
-                <a href="#" class="header item">
+                <a href="#" class="header item" data-component-value="{this.props.headerComponent}">
                     <img class="logo" src="./images/logo-top.png" />
                 </a>
             </div>
